--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -461,6 +461,12 @@
                                       </ng-container>                                     
                                       <!-- <button class="btn btn-primary ml-4" type="submit" (click)="saveGateForm()" >Save</button> -->
                                       <!-- <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button> -->
+                                    </div> 
+                                    <div *ngIf="gateId != ''" class="pt-3 pb-2">
+                                      <label>Trigger URL <i data-toggle="tooltip" data-placement="top" data-original-title="URL can be used to trigger Approval Gate" class="fa fa-question-circle" aria-hidden="true"></i></label>
+                                      <div class="d-flex  mr-2 align-items-center">
+                                        <span >{{triggerURL}} <i class="fa fa-clipboard" title="Copy to clipboard" role="button" aria-hidden="true" ngxClipboard [cbContent]="triggerURL"></i>  </span>
+                                      </div>
                                     </div>
                                       <!-- <span *ngIf="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched"
                                       class="help-block">
