--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -130,7 +130,7 @@
                   <td>{{service.finalScore}}</td>
                   <td
                     [ngClass]="{'text-danger':service.status == 'FAIL' || service.status == 'TERMINAL','text-success':service.status == 'PASS'|| service.status == 'SUCCEEDED'}">
-                    {{service.status}}</td>
+                    <a target="_blank" href="{{service.href}}">{{service.status}}</a></td>
                 </tr>
               </tbody>
             </table>
@@ -147,7 +147,7 @@
             <thead>
               <tr>
                 <th>Service</th>
-                <th>Score</th>
+                <th>Overall Score</th>
                 <th>Metric</th>
                 <th>Logs</th>
                 <th>Status</th>
@@ -169,7 +169,7 @@
                   <span *ngIf="service.logsScore == -1 || service.logsScore === null">- </span>
                  <span *ngIf="service.logsScore != -1 && service.logsScore != null">{{service.logsScore}} </span>
                   </td>
-                <td [ngClass]="{'text-danger':service.status == 'Fail' || service.status == 'TERMINAL' || service.status == 'RUNNING','text-success':service.status == 'Pass'|| service.status == 'SUCCEEDED', 'text-warning': service.status == 'Review'}">{{service.status}}</td>
+                <td class="showElementHover" [ngClass]="{'text-danger':service.status == 'Fail' || service.status == 'TERMINAL' || service.status == 'RUNNING','text-success':service.status == 'Pass'|| service.status == 'SUCCEEDED', 'text-warning': service.status == 'Review'}" (click)="getServiceCanaryReport(service.canaryId)">{{service.status}}</td>
               </tr>
             </tbody>
           </table>
