--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -320,7 +320,7 @@
       <div class="row no-gutters" *ngIf="canaryIdExists">
         <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12">
           <mat-drawer-container class="example-container" autosize>
-            <mat-drawer #sideNav class="example-sidenav" [position]="'end'" mode="side" opened="true">
+            <mat-drawer #sideNav class="example-sidenav" [position]="'end'" mode="side" opened="false">
               <div class="rightBox m-0 position-sticky">
                 <!-- <div class="rightBox_header bg-white d-flex align-items-center">
                   <div class="btns_icon d-flex ml-auto">
