fixes required for 3.3

--- a/src/styles.less
+++ b/src/styles.less
@@ -557,7 +557,7 @@ li {
 .view_in .sidebar_nav .subnav a{
 	padding-left: 15px;
 }
-.view_in .sidebar_nav .icon{
+.view_in .sidebar_nav .icon, .view_in .sidebar_nav .icon-new {
 	margin-right: 0;
 }
 .view_in .sidebar_nav:after{
@@ -590,12 +590,18 @@ li {
     border-radius: 10px;
 }
 
-/*icons*/
 .sidebar_nav .icon{
 	background-image: url(/../assets/images/icons.png);
 	background-repeat: no-repeat;
 	vertical-align: -7px;
 	display: inline-block;
+	margin-right: 5px;
+	height: 20px;
+	width: 18px;
+}
+
+/*icons*/
+.sidebar_nav .icon-new{
 	margin-right: 5px;
 	height: 20px;
 	width: 18px;
