Login redirection and Image source revert

--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -138,7 +138,7 @@
                       <span *ngIf="createApplicationForm.get('emailId').errors['emailId']">Please enter valid emailId Id</span>
                     </span>
                   </div>
-                  <!-- <div class="form-group" >
+                  <div class="form-group" >
                     <label>Image Source <i data-toggle="tooltip" data-placement="top" data-original-title="Repository to fetch images for Release Management" class="fa fa-question-circle" aria-hidden="true"></i></label>
                     <select class="form-control"  formControlName="imageSource" (change)="onImageSourceSelect($event.target.value)"
                     [ngClass]="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched?'is-invalid':''" >
@@ -149,7 +149,7 @@
                       class="invalid-feedback">
                       Image Source is required
                     </span>
-                  </div> -->
+                  </div>
                 </form><br>
                 <div class="col-10"  *ngIf="showApplicationForm">
                   <!-- <hr class="ml-0 mt-3 mb-3" /> -->
