--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -187,7 +187,7 @@
                           <div class="col-6 form-group mb-3 text-muted padding0">
                             <label>Service Name <span class="mandatory">*</span></label>
                             <div class="d-flex  mr-4 align-items-center">
-                              <input type="text" class="form-control input_len" formControlName="serviceName" 
+                              <input type="text" appLowercase class="form-control input_len" formControlName="serviceName" 
                               [ngClass]="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched ? 'is-invalid':''">
                               <button *ngIf="!editMode || serviceStatus[i] == 'New'" class="btn btn-primary ml-4" type="submit" (click)="saveServiceForm(i)" >Save</button>
                               <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
@@ -227,26 +227,26 @@
                                       <td *ngIf = "editMode">
                                         <span *ngIf="!isFeaturePresent[serviceId] || !isFeaturePresent[serviceId][featureName]">-</span>
                                         <span>
-                                          <i *ngIf="isFeaturePresent[serviceId] && isFeaturePresent[serviceId][featureName]" class="fa fa-check" aria-hidden="true"></i>
+                                          <i *ngIf="isFeaturePresent[serviceId] && isFeaturePresent[serviceId][featureName]" class="fa fa-check" [class.color-green]="featureName != selectedFeature[i]" aria-hidden="true"></i>
                                         </span>
                                       </td>
                                       <td *ngIf = "!editMode && featureName == 'visibility'">
                                         <span *ngIf="gateId == '' || gateId == null || gateId == undefined">-</span>
                                         <span *ngIf = "gateId != '' && gateId != null && gateId != undefined">
-                                          <i class="fa fa-check" aria-hidden="true"></i>
+                                          <i class="fa fa-check" [class.color-green]="featureName != selectedFeature[i]" aria-hidden="true"></i>
                                         </span>
                                       </td>
                                       <td *ngIf = "!editMode && featureName == 'deployment_verification'">
                                         <span *ngIf = "!deploymentVerificationFeatureSaved">-</span>
                                         <span *ngIf = "deploymentVerificationFeatureSaved">
-                                          <i class="fa fa-check" aria-hidden="true"></i>
+                                          <i class="fa fa-check" [class.color-green]="featureName != selectedFeature[i]" aria-hidden="true"></i>
                                         </span>
                                         
                                       </td>
                                       <td *ngIf = "!editMode && featureName == 'sapor'">
                                         <span *ngIf = "!saporFeatureSaved">-</span>
                                         <span *ngIf = "saporFeatureSaved">
-                                          <i class="fa fa-check" aria-hidden="true"></i>
+                                          <i class="fa fa-check color-green" aria-hidden="true"></i>
                                         </span>
                                       </td>
                                       <!-- <span><i *ngIf = "gateId != '' && gateId != null && gateId != undefined " class="fa fa-check" aria-hidden="true"></i></span> -->
