changes related to edit custom metric and apponboard fixes

--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -727,6 +727,8 @@
             
             <div class="col-12">
               <button class="btn btn-primary ml-2 savebtn" (click)="savemetrictemplate()">Save</button>
+              <!-- <button class="btn btn-primary ml-2 savebtn" *ngIf="isEditMode" (click)="Submitmetricdata()">Update</button> -->
+
             </div>
                         
           </div>
