--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -189,7 +189,7 @@
                             <div class="d-flex  mr-4 align-items-center">
                               <input type="text" appLowercase class="form-control input_len" formControlName="serviceName" 
                               [ngClass]="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched ? 'is-invalid':''">
-                              <button *ngIf="!editMode || serviceStatus[i] == 'New'" class="btn btn-primary ml-4" type="submit" (click)="saveServiceForm(i)" >Save</button>
+                              <button *ngIf="!editMode || serviceStatus[i] != 'Edit'" class="btn btn-primary ml-4" type="submit" (click)="saveServiceForm(i)" >Save</button>
                               <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
                               <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                               <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete Service" 
