--- a/src/app/visibility/visibility.component.html
+++ b/src/app/visibility/visibility.component.html
@@ -161,7 +161,7 @@
                                     <div class="col-sm-1 mr-2 alignCommentBtn"><button type="button"
                                             class="btn btn-danger align-bottom" (click)="approvalGateReview('reject', approvalGateComment)">Reject</button></div>
                                     <div class="p-3"><label class="pr-2" >Activated Time: </label>
-                                        <span>{{this.gateActivatedTime | date: "MMM dd, yyyy HH:mm"}}</span>
+                                        <span>{{gateActivatedTime | date: "MMM dd, yyyy HH:mm"}}</span>
                                     </div>
                                 </div>
 
@@ -176,27 +176,34 @@
                                   <tr>
                                       <td><label >Callback URL:</label></td>
                                       <td>
-                                        <a href="{{gateApprovalCallBackURL}}">{{gateApprovalCallBackURL}}</a>
+                                        {{gateApprovalCallBackURL}}
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td><label >Rejection URL:</label></td>
+                                      <td>
+                                        {{gateRejectionCallBackURL}}
                                       </td>
                                   </tr>
                                   <tr>
                                       <td><label >Activated Time:</label></td>
                                       <td>
                                         <!-- {{approvalGateComment}} {{date | date:"dd/MM/yyyy HH:mm"}} -->
-                                        {{this.gateActivatedTime | date: "MMM dd, yyyy HH:mm"}}
+                                        {{gateActivatedTime | date: "MMM dd, yyyy HH:mm"}}
                                       </td>
                                   </tr>
                                   <tr>
-                                      <td><label >Approval Time:</label></td>
+                                      <td *ngIf="gateInstanceDetails.approvalStatus.status === 'approved'"><label >Approval Time:</label></td>
+                                      <td *ngIf="gateInstanceDetails.approvalStatus.status === 'rejected'"><label >Rejection Time:</label></td>
                                       <td>
                                         <!-- {{approvalGateComment}} -->
-                                        {{this.gateApprovalTime | date: "MMM dd, yyyy HH:mm"}}
+                                        {{gateApprovalTime | date: "MMM dd, yyyy HH:mm"}}
                                       </td>
                                   </tr>
                                 </table>
                                 <table class="commentsText" *ngIf="gateStatusPending">
                                     <tr>
-                                      <td colspan="2">This gate is not activated.</td>
+                                      <td colspan="2">This approval gate is not activated.</td>
                                   </tr>
                                   </table>
                                   
