--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -114,7 +114,7 @@
                 <form [formGroup]="createApplicationForm">
                   <div class="form-group">
                     <label>Application Name <span class="mandatory">*</span></label>
-                    <input type="text" appLowercase class="form-control" [readonly]="editMode" formControlName="name"  [ngClass]="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched ? 'is-invalid':''">
+                    <input type="text" appLowercase class="form-control" [readonly]="editMode || applicationId" formControlName="name"  [ngClass]="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched ? 'is-invalid':''">
                     <span *ngIf="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched"
                       class="invalid-feedback">
                       <span *ngIf="createApplicationForm.get('name').errors['required']">Application Name is
@@ -163,7 +163,8 @@
                  <!--col-12-->
                  <div class="col-8 pull-right"  *ngIf="showApplicationForm">
                   <div class="page_access text-right py-2 px-3">
-                    <button class="btn btn-primary ml-2" (click)="SubmitApplicationForm()">Save & Next</button>
+                    <button class="btn btn-primary ml-2" *ngIf="editMode" (click)="SubmitApplicationForm()">Update & Next</button>
+                    <button class="btn btn-primary ml-2" *ngIf="!editMode" (click)="SubmitApplicationForm()">Save & Next</button>
                     <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
                     <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                    
