--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -734,7 +734,7 @@
                 </div>
                 <!-- /.form-group -->
                  <!--col-12-->
-                 <div class="col-8 pull-right">
+                 <div class="col-8 pull-right" *ngIf="environmentForm.value.environments.length !== 0 ? true : false ">
                   <div class="page_access text-right py-2 px-3">
                     <!-- <button class="btn btn-primary ml-2" *ngIf="editMode" (click)="SubmitEnvironmentsForm()">Update</button> -->
                     <button class="btn btn-primary ml-2" (click)="SubmitEnvironmentsForm()">Save</button>
@@ -828,7 +828,7 @@
               </div>
               <!-- /.col-6 -->
                <!--col-12-->
-               <div class="col-8 pull-right" *ngIf="showPermissionForm">
+               <div class="col-8 pull-right" *ngIf="showPermissionForm && groupPermissionForm.value.userGroups.length !== 0 ? true : false ">
                 <div class="page_access text-right py-2 px-3">
                   <button class="btn btn-primary ml-2" (click)="SubmitGroupPermissionForm()">Save</button>
                   <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
