--- a/src/styles.less
+++ b/src/styles.less
@@ -2121,3 +2121,8 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.padding0{
 		padding:0px;
 	}
+
+	.btn-primary[disabled], .badge-primary[disabled] {
+		background: rgba(0,0,0,15%) !important;
+		border: none;
+	}
