--- a/src/app/visibility/visibility.component.less
+++ b/src/app/visibility/visibility.component.less
@@ -102,3 +102,12 @@
 	border-top-right-radius: 5px;
 	border-bottom: 1px solid rgb(218 218 218);
 }
+.tcFirstColumn{			//tool connector first column width
+	min-width: 120px;
+	span{
+    font-size: 12px;
+    font-weight: normal;
+    color: #666;
+
+	}
+}
