tags api failing due to null application ids

--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -285,7 +285,7 @@
                   </div>
                   <div>
                     <button type="button" mat-button matStepperNext class="btn btn-warning pull-left" (click)="cancelLogForm()" type="reset" data-dismiss="modal" aria-label="Close">Cancel</button>
-                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next btn-color pull-right" style="margin-left: 10px;" (click)="getTagsList">Next</button>
+                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next btn-color pull-right" style="margin-left: 10px;" (click)="getTagsList()">Next</button>
                     <button mat-button matStepperPrevious class="pull-right btn-color">Back</button>
 
                   </div>
