--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -611,7 +611,7 @@
                     <div class="tab-pane p-4 fade " id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab"
                     [ngClass]="{'active': selectedTab == 'log-analysis','show': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}">
                         <ng-container *ngIf = "selectedTab === 'log-analysis'">
-                          <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" [isRerun]="isRerunLogs" [serviceStatus]="statusOfSelectedService" (selectedServiceIdFromChild)="getlogAnalysisData($event)" (enterdToLogLines)="getEventsFromLogAnalysis($event)"></app-log-analysis>
+                          <app-log-analysis [applicationId]="applicationId" [canaryId]="control.value" [serviceId]="selectedServiceId" [isRerun]="isRerunLogs" [serviceStatus]="statusOfSelectedService" (selectedServiceIdFromChild)="getlogAnalysisData($event)" (enterdToLogLines)="getEventsFromLogAnalysis($event)"></app-log-analysis>
                         </ng-container>
                       </div>
                       <div class="tab-pane mp-4"  id="metric-analysis" role="tabpanel" aria-labelledby="metric-analysis-tab"
