showing unclassified initially in dropdown where tags are not selected

--- a/src/app/application/deployment-verification/correlation/correlationform/correlationform.component.html
+++ b/src/app/application/deployment-verification/correlation/correlationform/correlationform.component.html
@@ -5,7 +5,7 @@
     <div class="row no-gutters">
       <div class="col" style="max-width: 20%;">
         <ul class="service_list list-unstyled">
-          <li class="serviceHeading">Services</li>
+          <li class="serviceHeading" style="font-size: 16px;"><b>Services</b></li>
           <li *ngFor="let serviceArray of serviceInfo; let i = index" (click)="selectService(serviceArray)" ><a [ngClass]="{'selected': serviceArray.serviceId== selectedService}">{{serviceArray.serviceName}}</a></li>
         </ul>
         <!-- /.service_list -->
