--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -273,7 +273,7 @@
             </div>
           </div>
         </div>
-        <h3 *ngIf="logAnalysisData?.clusters?.length == 0">No Content</h3>
+        <h3 *ngIf="logAnalysisData?.clusters?.length == 0">No Errors found</h3>
       </div>
     </div>
   </div>
