--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -118,18 +118,24 @@
                                   required</span>    
                               </span>
                             </div>
-                            <!-- / elastic index pattern -->
-                             <!-- elastic kibana index -->
-                             <div class="form-group">
-                              <label>Kibana Default Index</label>
-                              <input type="text" class="form-control" formControlName="kibanaIndex" [ngClass]="createLogForm.get('kibanaIndex').invalid && createLogForm.get('kibanaIndex').touched ? 'is-invalid':''">
-                              <span *ngIf="createLogForm.get('kibanaIndex').invalid && createLogForm.get('kibanaIndex').touched"
+                            <!-- / elastic kibana index -->
+                            <div class="form-group">
+                              <label>Response Key</label>
+                              <!-- <input type="text" class="form-control w-100" formControlName="regExResponseKey" [ngClass]="createLogForm.get('regExResponseKey').invalid && createLogForm.get('regExResponseKey').touched ? 'is-invalid':''"> -->
+                              <select class="form-control w-100" formControlName="regExResponseKey">
+                                <option value="" [disabled]="true">Select</option>
+                                <option *ngFor="let responsekey of responseKeys" value="{{responsekey}}" >
+                                    {{responsekey}}</option>
+                              </select>
+                              <span *ngIf="createLogForm.get('regExResponseKey').invalid && createLogForm.get('regExResponseKey').touched"
                                 class="invalid-feedback">
-                                <span *ngIf="createLogForm.get('kibanaIndex').errors['required']">Index pattern is
-                                  required</span>    
+                                <!-- <span *ngIf="createLogForm.get('regExResponseKey').errors['required']">Response Key is
+                                  required</span>     -->
                               </span>
                             </div>
-                            <!-- / elastic kibana index -->
+                             <!-- /.form-group -->
+                            <!-- / elastic index pattern -->
+                            
                            </div>
                            <!-- /.col-6 -->
                            
@@ -153,21 +159,17 @@
                                      required</span>     -->
                                  </span>
                                </div>
-                               <div class="form-group mr-2">
-                                <label>Response Key</label>
-                                <!-- <input type="text" class="form-control w-100" formControlName="regExResponseKey" [ngClass]="createLogForm.get('regExResponseKey').invalid && createLogForm.get('regExResponseKey').touched ? 'is-invalid':''"> -->
-                                <select class="form-control w-100" formControlName="regExResponseKey">
-                                  <option value="" [disabled]="true">Select</option>
-                                  <option *ngFor="let responsekey of responseKeys" value="{{responsekey}}" >
-                                      {{responsekey}}</option>
-                                </select>
-                                <span *ngIf="createLogForm.get('regExResponseKey').invalid && createLogForm.get('regExResponseKey').touched"
-                                  class="invalid-feedback">
-                                  <!-- <span *ngIf="createLogForm.get('regExResponseKey').errors['required']">Response Key is
-                                    required</span>     -->
-                                </span>
-                              </div>
-                               <!-- /.form-group -->
+                                <!-- elastic kibana index -->
+                             <div class="form-group mr-2">
+                              <label>Kibana Default Index</label>
+                              <input type="text" class="form-control  w-100" formControlName="kibanaIndex" [ngClass]="createLogForm.get('kibanaIndex').invalid && createLogForm.get('kibanaIndex').touched ? 'is-invalid':''">
+                              <span *ngIf="createLogForm.get('kibanaIndex').invalid && createLogForm.get('kibanaIndex').touched"
+                                class="invalid-feedback">
+                                <span *ngIf="createLogForm.get('kibanaIndex').errors['required']">Index pattern is
+                                  required</span>    
+                              </span>
+                            </div>
+                            
                              </div>
                              <!-- /.form-inline -->
                            </div>
