serach box changes

--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -308,4 +308,22 @@ paddingLeftRight5
     color: #777;
     cursor: pointer;
     z-index: 10;
+}.border
+{
+  border:1px solid black;
+  background-color: #f2f2f2;
+  padding: 5px;
+}
+.maxwidth100
+{
+  max-width: 100%;
+}
+.absolute
+{
+  position: absolute;
+  right: 30px;
+}
+.fa-search
+{
+  cursor: pointer;
 }
