--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -311,7 +311,7 @@ paddingLeftRight5
 }.border
 {
   border:1px solid black;
-  background-color: #f2f2f2;
+  background-color:#f5f6f7;
   padding: 5px;
 }
 .maxwidth100
@@ -326,4 +326,9 @@ paddingLeftRight5
 .fa-search
 {
   cursor: pointer;
+}
+.closed
+{
+  font-size: 1.8rem !important;
+  margin-top: 12px;
 }
