--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.less
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.less
@@ -18,3 +18,10 @@
 .display-save-btn{
   padding: 10px;
 }
+.custom-disable{
+  background-color: white;  
+    border-color: rgba(118, 118, 118, 0.3);
+    color: gray;
+    cursor: default;
+    pointer-events: none;
+}
