--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -699,9 +699,9 @@
                   <!-- <div class="col-8">
                     <hr class="ml-0 mt-3 mb-3" />
                   </div> -->
-                  <div class="row" *ngIf="environmentForm.value.environments.length !== 0 ? true : false ">
+                  <div class="row">
                     <div class="col-9">
-                      <form [formGroup]="environmentForm">
+                      <form [formGroup]="environmentForm" *ngIf="environmentForm.value.environments.length != 0 ? true : false ">
                         <table class="table table-outline" formArrayName="environments">
                           <thead>
                             <tr>
@@ -745,7 +745,7 @@
                     <!-- <button class="btn btn-primary ml-2" *ngIf="editMode" (click)="SubmitEnvironmentsForm()">Update</button> -->
                     <button class="btn btn-primary ml-2" (click)="SubmitEnvironmentsForm()">Save</button>
                     <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
-                    <button class="btn btn-danger ml-1" (click)="deleteEnvironments()">Delete</button>
+                    <button class="btn btn-danger ml-1" *ngIf="environmentFeatureSaved || envData && envData.environments.length >=1 || environmentFeatureUpdated" (click)="deleteEnvironments()"> Delete</button>
  
                     <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                    
@@ -838,7 +838,7 @@
                 <div class="page_access text-right py-2 px-3">
                   <button class="btn btn-primary ml-2" (click)="SubmitGroupPermissionForm()">Save</button>
                   <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
-                  <button class="btn btn-danger ml-1" (click)="deleteGroupPermissions()">Delete</button>
+                  <button class="btn btn-danger ml-1" *ngIf="groupPermissionFeatureSaved || editMode" (click)="deleteGroupPermissions()">Delete</button>
 
                   <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                  
