--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -202,25 +202,25 @@
                         </select>
                       </div> -->
                       <div class="form-group text-muted position-relative">
-                        <label>Metric Successful Score (successMetricsResultScore)<span data-toggle="tooltip" title="The score under which the Metric Analysis should fail"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
+                        <label>Metric Successful Score<span data-toggle="tooltip" title="The score under which the Metric Analysis should fail"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
                         <input type="text" class="form-control is-invalid col-sm-6" formControlName="successMetricsResultScore" />
                         <!-- <div class="invalid-feedback">
                           Error message goes here.
                         </div> -->
                       </div>
                       <div class="form-group text-muted">
-                        <label>Metric Unhealthy Score (minimumMetricsResultScore)<span data-toggle="tooltip" title="The score above which the Metric Analysis should be a pass"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
+                        <label>Metric Unhealthy Score<span data-toggle="tooltip" title="The score above which the Metric Analysis should be a pass"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
                         <input type="text" class="form-control col-sm-6" formControlName="minimumMetricsResultScore" />
                       </div>
                       <div class="form-group text-muted position-relative">
-                        <label>Logs Successful Score (canaryResultScore)<span data-toggle="tooltip" title="The score under which the Log Analysis should fail"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
+                        <label>Logs Successful Score<span data-toggle="tooltip" title="The score under which the Log Analysis should fail"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
                         <input type="text" class="form-control is-invalid col-sm-6" formControlName="canaryResultScore" />
                         <!-- <div class="invalid-feedback">
                           Error message goes here.
                         </div> -->
                       </div>
                       <div class="form-group text-muted">
-                        <label>Logs Unhealthy Score(minimumCanaryResultScore) <span data-toggle="tooltip" title="The score above which the Log Analysis should be a pass"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
+                        <label>Logs Unhealthy Score<span data-toggle="tooltip" title="The score above which the Log Analysis should be a pass"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
                         <input type="text" class="form-control col-sm-6" formControlName="minimumCanaryResultScore" />
                       </div>
                       <!-- <div class="formgroup" [formGroup]="formGroup"> -->
@@ -272,7 +272,7 @@
                         </div>
                       </div>
                       <div class="form-group text-muted">
-                        <label>Canary Analysis interval mins <span data-toggle="tooltip" title="Intervals in which metric-data is fetched and analysed"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
+                        <label>Canary Analysis Interval Mins <span data-toggle="tooltip" title="Intervals in which metric-data is fetched and analysed"><img src="../../../assets/images/help_icon.png" alt="icon" /></span></label>
                         <div class="d-flex align-items-center">
                           <input type="text" class="form-control mr-2 col-sm-6" formControlName="canaryAnalysisIntervalMins"/>
                           <span>minutes</span>
