--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -901,7 +901,7 @@
           <i class="fa fa-times"></i>
         </button>
       </div>
-      <div class="modal-body p-0">
+      <div class="modal-body p-0" *ngIf="showLogTempPopup">
         <app-metric-template [isEditMode]="metricTemplateEditMode" [templateData]="metricTemplateDetails" [templateIndex]="editTemplateIndex" [metricTemplate]="isMetricTemplateClicked" [applicationData]="selectedApplicationData"></app-metric-template>
       </div>
     </div>
