--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -1,5 +1,5 @@
   <div class="pt-1">
-    <ul class="nav tab-lined nav-tabs {{isEditMode ? 'disabledTab':''}}" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
+    <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
       <li class="nav-item" >
         <a class="nav-link {{isEditMode ? '':'active'}}" id="logtemplate-form-tab" data-toggle="tab" role="tab" aria-controls="logtemplate-form" aria-selected="true">Log Template</a>
       </li>
@@ -59,7 +59,7 @@
                               </select>
                               <span *ngIf="createLogForm.get('monitoringProvider').invalid && createLogForm.get('monitoringProvider').touched"
                                 class="invalid-feedback">
-                                Datasource S ource is required
+                                Datasource Source is required
                               </span>
                             </div>
                             <!--/ form group log monitoring provider -->
